# spotify-autopush

./: .cache  .env  .env.example  .gitignore  README.md  github_twitter_example.py  main.py  profile.md  pyproject.toml  requirements.txt  sap  test.md
spotify_autopush/: PROFILE_README.md  README.md  __main__.py  last_readme.md  main.py
spotify_autopush/res/: last_readme.md
spotify_autopush/src/commands/: cmd_checkup.py  com_get.py
spotify_autopush/src/models/: cli.py  env_loader.py  error_handler.py  github.py  spotify.py  twitter.py
tests/: test_app.py
