[tool.poetry]
name = "spotify_autopush"
version = "0.0.0"
description = "A simple CLI to update github bio and status."
authors = ["Arthur Broudoux <arthur.broudoux@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
spotify_autopush = "spotify_autopush.main:app"

[tool.poetry.dependencies]
python = "^3.12"
spotipy = "^2.19.0"
python-dotenv = "^1.0.0"
typer = {extras = ["all"], version = "^0.9.0"}
plyer = "^2.1.0"
pyobjus = "^1.2.3"
pync = "^2.0.3"
markdown = "^3.5.2"

[build-system]
requires = ["poetry-core"]